<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/galleryFragment">

    <fragment
        android:id="@+id/galleryFragment"
        android:name="com.photoeditor.ui.GalleryFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery">

        <action
            android:id="@+id/action_gallery_to_editor"
            app:destination="@id/editorFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
            <argument
                android:name="photoUri"
                app:argType="string" />
        </action>

        <action
            android:id="@+id/action_gallery_to_batch"
            app:destination="@id/batchFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
            <argument
                android:name="photoUris"
                app:argType="string[]"
                app:nullable="true" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/editorFragment"
        android:name="com.photoeditor.ui.EditorFragment"
        android:label="@string/edit"
        tools:layout="@layout/fragment_editor">

        <argument
            android:name="photoUri"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/batchFragment"
        android:name="com.photoeditor.ui.BatchFragment"
        android:label="@string/batch_processing"
        tools:layout="@layout/fragment_batch">

        <argument
            android:name="photoUris"
            app:argType="string[]"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/filterFragment"
        android:name="com.photoeditor.ui.FilterFragment"
        android:label="@string/filters"
        tools:layout="@layout/fragment_filter" />

</navigation>
